[package]
name = "frown_config"
version = "1.0.3"
authors = ["Frown Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for frown, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/frown"
keywords = [ "crypto", "frown", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

frown_core = { path = "../core", version = "1.0.3" }
frown_servers = { path = "../servers", version = "1.0.3" }
frown_p2p = { path = "../p2p", version = "1.0.3" }
frown_util = { path = "../util", version = "1.0.3" }
frown_wallet = { path = "../wallet", version = "1.0.3" }

[dev-dependencies]
pretty_assertions = "0.5.1"
