[package]
name = "frown_gen_gen"
version = "0.0.1"
edition = "2018"
authors = ["Frown Developers <mimblewimble@lists.launchpad.net>"]
description = "Utility to automate the generation of Frown's genesis block"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/frown"
keywords = [ "crypto", "frown", "mimblewimble" ]
readme = "README.md"

[[bin]]
name = "gen_gen"
path = "src/bin/gen_gen.rs"

[dependencies]
chrono = "0.4.4"
cuckoo_miner = "1.0.0"
curl = "0.4.19"
frown_core = { path = "../../core" }
frown_chain = { path = "../../chain" }
frown_keychain = { path = "../../keychain" }
frown_miner_plugin = "1.0.0"
frown_store = { path = "../../store" }
frown_util = { path = "../../util" }
frown_wallet = { path = "../../wallet" }
rpassword = "2.0.0"
serde_json = "1"

[patch.crates-io]
frown_api = { path = "../../api" }
frown_core = { path = "../../core" }
frown_chain = { path = "../../chain" }
frown_keychain = { path = "../../keychain" }
frown_util = { path = "../../util" }
frown_wallet = { path = "../../wallet" }
